# rust-iced-playground

./: .gitignore  Cargo.toml  flake.nix
src/: library.rs  main.rs
