[package]
name = "manga-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.3.11", features = ["derive", "string"] }
iced = { version = "0.9.0", features = ["tokio", "image"] }
image = "0.24.6"
native-dialog = "0.6.4"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["fs"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
zip = "0.6.6"
