[package]
name = "manga-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.4.2", features = ["derive", "string"] }
iced = { version = "0.10.0", features = ["tokio", "image", "async-std", "svg"] }
image = "0.24.7"
native-dialog = "0.6.4"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["fs"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
zip = "0.6.6"
